# scribe

./: .gitignore  .repomixignore  .scribeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PYPI_RELEASE_GUIDE.md  README.md  README_PYPI.md  REPOMIX_COMPATIBILITY.md  TODO.md  config_generator.py  enhanced_scribe.py  intelligent_scribe.py  pyproject.toml  rendergit.py  repomix.config.json  repository_analyzer.py  requirements.txt  requirements_research.txt  scribe.config.json  scribe.py  scribe_analysis.json  smart_filter.py  test_intelligent_defaults.py  unified_research_pipeline.py  upload_to_pypi.sh  validator.py
.github/workflows/: ci.yml  evaluation-matrix.yml  fastpath-v2-pipeline.yml  fastpath_validation.yml
.serena/: project.yml
.serena/memories/: architecture_requirements.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
benchmarks/: README.md  __init__.py  collect.py  paired_bootstrap.py  run.py  score.py
benchmarks/results/: scalability_small_500_files.json
ci/: README.md  benchmark_runner.py  pipeline.py  requirements.txt  run_pipeline.sh  statistical_analysis.py
config/: gates.yaml  research_gates_config.yaml
docs/: ACCEPTANCE_GATES.md  CI_CD_IMPLEMENTATION.md  INFRASTRUCTURE.md  ORIGINAL_RENDERGIT_README.md  PACKREPO_FASTPATH_BASELINE_METRICS.md  PYPI_PACKAGE_COMPLETE.md  README.md  V1_IMPLEMENTATION_COMPLETE.md
docs/research/: ACADEMIC_STATISTICAL_FRAMEWORK_README.md  FASTPATH_RESEARCH_PUBLICATION_PACKAGE.md  FASTPATH_V5_RESEARCH_IMPLEMENTATION_COMPLETE.md  ICSE2025_SUBMISSION_README.md  PUBLICATION_RESEARCH_README.md  RESEARCH_GRADE_ACCEPTANCE_SYSTEM.md  STATISTICAL_VALIDATION.md  compile_paper.sh  fastpath_research_supplementary.md  fastpath_research_whitepaper.tex  fastpath_v5_icse2025_paper.tex  references.bib  statistical_analysis_appendix.md  statistical_methods_manuscript_template.tex  supplementary_materials.md
eval/: ground_truth_protocol.md  scalability_analysis.md
eval/datasets/: dataset_table.md
eval/reproducibility/: boot_transcript_template.json  environment_specification.md
eval/scripts/: compute_interrater_reliability.py  extract_pr_relevance.py  generate_annotation_tasks.py
infra/: Dockerfile  compose.override.yaml  compose.yaml
packrepo/: __init__.py  library.py
packrepo/benchmarks/: __init__.py  scalability_benchmark.py  synthetic_repo_generator.py
packrepo/cli/: __init__.py  fastpack.py
packrepo/configs/: dataset_config_example.json  fastpath.yaml
packrepo/docs/: __init__.py  link_graph.py  text_priority.py
packrepo/evaluator/: README.md  enhanced_matrix_runner.py  matrix_runner.py  requirements.txt
packrepo/fastpath/: __init__.py  bandit_router.py  base_types.py  centrality.py  config_manager.py  demotion.py  diff_packer.py  execution_strategy.py  fast_scan.py  feature_flags.py  git_integration.py  heuristics.py  incremental_pagerank.py  integrated_v5.py  negative_controls.py  output_formats.py  patch_system.py  pattern_filter.py  personalized_centrality.py  quotas.py  (+3 more)
paper/: __init__.py  citation_audit_report.md  draft.tex  fastpath_v5_icse2025_research_paper.tex  fastpath_v5_icse2025_simplified.tex  patch_tex.py  refs.bib  update_figures.py  update_tables.py
research/: README.md
results/: README.md
scripts/: acceptance_gates.py  bootstrap_bca.py  ci_full_test.sh  collect_results.py  create_reproducibility_kit.py  create_sample_data.py  crosscheck_refs.sh  eval_metrics.py  fdr.py  gatekeeper.py  pack_verify.py  promote.py  quick_v1_test.py  research_grade_acceptance_gates.py  research_grade_gatekeeper.py  research_grade_pipeline.py  run_acceptance_pipeline.py  run_baselines.sh  run_complete_evaluation.sh  run_evaluation_matrix.py  run_fastpath.sh  run_scalability_tests.sh  scan_secrets.py  sign_boot.py  sign_transcript.py  spinup_smoke.sh  test_acceptance_integration.py  test_v1_validation.py  validate_acceptance_setup.py  validate_research_system.py  validate_v2.py
spec/: index.schema.json
tests/: __init__.py  test_baseline_parity_system.py  test_basic_variants.py  test_evaluation_suite.py  test_fastpath_enhancements.py  test_fastpath_validation.py  test_hermetic_boot.py  test_orchestrator.py  test_packrepo_basic.py  test_repomix_compatibility.py  test_v2_system.py  test_v3_demotion_controller.py  test_v3_edge_cases.py
tools/: README.md
(+173 files in other folders)
